--- a/lesson 6/index.html
+++ b/lesson 6/index.html
@@ -6,15 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.5.0/lib/p5.js"></script>
-    <script src="LivingCreature.js"></script>
-    <script src="script.js"></script>
+    <!-- <script src="LivingCreature.js"></script>
+
     <script src="grass.js"></script>
     <script src="grassEater.js"></script>
     <script src="predator.js"></script>
     <script src="jur.js"></script>
     <script src="fruit.js"></script>
     <script src="hunter.js"></script>
-    <script src="poacher.js"></script>
+    <script src="poacher.js"></script> -->
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="script.js"></script>
 
 </head>
 <body>
