--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -183,8 +183,10 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,121,100,1) 35%, rgb
       <button onclick="addJur()" class="box box--fixed water">
         Water
       </button>
+      <button class="Restart  " onclick="restart()">
+       Restart
+      </button>
     </div>
 </body>
 
 </html>
-<!-- // -->
